# tcli

./: .env.global  .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/execution/: README.md  execution_process.html
doc/internal/scripts/configure/: internal_configure_tool.html
doc/scripts/configure/: script_configure_py.html  script_depmanager_py.html
doc/security/3WV/: 3WV.html  README.md
include/: convenient_string.hpp
scripts/: configure.py  depmanager.py
src/: main.cpp  main.hpp
src/auth/: CMakeLists.txt  auth.cpp  auth.hpp
src/config/: config.cpp  config.hpp
src/config/dotenv/: dotenv.cpp  dotenv.hpp
src/config/tdata/: CmakeLists.txt  tdata.cpp  tdata.hpp
src/fs/: fs.cpp  fs.hpp
src/helper/: helper.cpp  helper.hpp
